[package]
name = "claude-watch"
version = "0.1.0"
edition = "2021"
description = "TUI for monitoring Claude Code sessions in tmux"
license = "MIT"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Process detection
sysinfo = "0.32"

# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
dirs = "5.0"
chrono = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
